gobmkida/c1/incremental_order_moves
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/incremental_order_moves/src/engine/board.c:4153:7: error: use of undeclared identifier 'byte_9AA89F'
v13 = byte_9AA89F[move]; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/incremental_order_moves/src/engine/board.c:4165:24: error: use of undeclared identifier 'byte_9AA89F'
if ( ( unsigned __int8)byte_9AA89F[move] == color ) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/incremental_order_moves/src/engine/board.c:4208:7: error: use of undeclared identifier 'byte_9AA88C'
v14 = byte_9AA88C[move]; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/incremental_order_moves/src/engine/board.c:4220:24: error: use of undeclared identifier 'byte_9AA88C'
if ( ( unsigned __int8)byte_9AA88C[move] == color ) 
                       ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/incremental_order_moves/src/obj/1/board.o] Error 1
